[tool.poetry]
name = "split_pdf"
version = "0.1.0"
description = ""
authors = ["puyodev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
pdf2image = "^1.16.3"
pypdf = "^3.9.0"
streamlit = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
