[tool.poetry]
name = "split_pdf"
version = "0.1.0"
description = ""
authors = ["puyodev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
pdf2image = "^1.16.3"
streamlit = "^1.22.0"
streamlit-analytics = "^0.4.1"
python-dotenv = "^1.0.0"
google-cloud-firestore = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
